# Solana-Crowdfunding

./: Cargo.toml  README.md  deploy.sh  test-client.ts  test_client.py
src/: lib.rs
tests/: crowdfunding.rs
