[package]
name = "solana-crowdfunding"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.26"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.18.26"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1